tests/fixtures/invalid/int_notin_str.py
# Cannot use 'not in' with Int and Str
x: bool = 1 not in "hello"
